# pttllm

./: .env-dist  .gitignore  LICENSE  README.md  main.py  pyproject.toml
pttllm/: asr.py  audio.py  llm.py  main.py  phonetic_alphabet.py  ptt.py  text.py  torch_patch.py  tts.py
